--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ panic-halt = "0.2.0"
 embedded-hal = "0.2.4"
 cortex-m-rtic = "0.5.1"
 nrf52810-pac = "0.9.0"
-nrf52810-hal = { git = "https://github.com/hannes-hochreiner/nrf-hal", features = ["rt"] }
+nrf52810-hal = { version="0.12", features = ["rt"] }
 
 [lib]
 name = "common"
