improved debug start up

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,9 @@
             "autorun": [
                 "target remote | ssh hc2 \"sudo openocd -c 'gdb_port pipe; log_output /dev/null; source [find interface/raspberrypi-native.cfg]; transport select swd; source [find target/nrf52.cfg]; bcm2835gpio_swd_nums 23 24; bcm2835gpio_trst_num 18; init'\"",
                 "monitor reset halt",
-                "load"
+                "load",
+                "tbreak main",
+                "c"
             ],
             "preLaunchTask": "pre-launch"
         },
@@ -29,7 +31,9 @@
             "autorun": [
                 "target remote | ssh hc2 \"sudo openocd -c 'gdb_port pipe; log_output /dev/null; source [find interface/raspberrypi-native.cfg]; transport select swd; source [find target/nrf52.cfg]; bcm2835gpio_swd_nums 9 11; bcm2835gpio_trst_num 10; init'\"",
                 "monitor reset halt",
-                "load"
+                "load",
+                "tbreak main",
+                "c"
             ],
             "preLaunchTask": "pre-launch"
         }
