--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,6 +38,22 @@
             "preLaunchTask": "pre-launch"
         },
         {
+            "name": "Debug Sensor Node BL651",
+            "type": "gdb",
+            "request": "launch",
+            "gdbpath": "gdb",
+            "target": "target/thumbv7em-none-eabi/debug/sensor-node-core-bl651",
+            "cwd": "${workspaceRoot}",
+            "autorun": [
+                "target remote | ssh hc1 \"sudo openocd -c 'gdb_port pipe; log_output /dev/null; source [find interface/raspberrypi-native.cfg]; transport select swd; source [find target/nrf52.cfg]; bcm2835gpio_swd_nums 23 24; bcm2835gpio_trst_num 18; init'\"",
+                "monitor reset halt",
+                "load",
+                "tbreak main",
+                "c"
+            ],
+            "preLaunchTask": "pre-launch"
+        },
+        {
             "name": "Debug Personal-Beacon",
             "type": "gdb",
             "request": "launch",
