--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,12 @@ path = "src/bin/personal-beacon.rs"
 test = false
 bench = false
 
+[[bin]]
+name = "sensor-node-core-bl651"
+path = "src/bin/sensor-node-core-bl651.rs"
+test = false
+bench = false
+
 [profile.release]
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
