--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,15 @@ name = "sensor-net-nrf52810-firmware"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.6.0"
-cortex-m-rt = "0.6.10"
-cortex-m-semihosting = "0.3.3"
-panic-halt = "0.2.0"
-embedded-hal = "0.2.4"
-cortex-m-rtic = "0.5.1"
-nrf52810-pac = "0.9.0"
-nrf52810-hal = { version="0.12", features = ["rt"] }
+cortex-m = "0.6"
+cortex-m-rt = { version = "0.6", features = ["device"] }
+cortex-m-semihosting = "0.3"
+panic-halt = "0.2"
+embedded-hal = "0.2"
+cortex-m-rtic = "0.5"
+nrf52810-pac = "0.9"
+#nrf52810-hal = { version="0.12", features = ["rt"] }
+nrf52810-hal = { path = "/opt/hannes/nrf-hal/nrf52810-hal", features = ["rt"] }
 
 [lib]
 name = "common"
