add writing UICR

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -70,6 +70,22 @@
             "preLaunchTask": "pre-launch"
         },
         {
+            "name": "Debug nrf52810 conf",
+            "type": "gdb",
+            "request": "launch",
+            "gdbpath": "gdb",
+            "target": "target/thumbv7em-none-eabi/debug/nrf52810-conf",
+            "cwd": "${workspaceRoot}",
+            "autorun": [
+                "target remote | ssh hc1 \"sudo openocd -c 'gdb_port pipe; log_output /dev/null; source [find interface/raspberrypi-native.cfg]; transport select swd; source [find target/nrf52.cfg]; bcm2835gpio_swd_nums 23 24; bcm2835gpio_trst_num 18; init'\"",
+                "monitor reset halt",
+                "load",
+                "tbreak main",
+                "c"
+            ],
+            "preLaunchTask": "pre-launch"
+        },
+        {
             "name": "Debug Async Test",
             "type": "gdb",
             "request": "launch",
